--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,5 +44,5 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Validate User!
+      - name: Run user validation
+        run: git log -1 --pretty=format:'%an' | xargs
