--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,6 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run user validation
-        run: ${{ github.event.pull_request.user.login }} 
+        run: echo ${{ github.event.pull_request.user.login }} 
         #run: git log -1 --pretty=format:'%ae' | xargs
 
