--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,14 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run user validation
-        run: echo ${{ github.event.pull_request.user.login }} 
-        #run: git log -1 --pretty=format:'%ae' | xargs
+        run: | 
+          if ${{ github.event.pull_request.user.login }} == ${{ secretc.ALLOWED_USERS}}; then
+            echo Pull allowed!
+          else
+            echo Pull not allowed!
+            exit 1
+          fi
 
+
+        #run: echo ${{ github.event.pull_request.user.login }} 
+        #run: git log -1 --pretty=format:'%ae' | xargs
