--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run user validation
         run: | 
-          if ${{ github.event.pull_request.user.login }} == ${{ secretc.ALLOWED_USERS}}; then
+          if ${{ github.event.pull_request.user.login }} == ${{ secrets.ALLOWED_USERS}}; then
             echo Pull allowed!
           else
             echo Pull not allowed!
