--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,13 +45,25 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run user validation
-        run: | 
-          if ${{ github.event.pull_request.user.login }} == ${{ secrets.ALLOWED_USERS}}; then
-            echo Pull allowed!
-          else
-            echo Pull not allowed!
-            exit 1
-          fi
+        if: ${{ github.event.pull_request.user.login }} == ${{ secrets.ALLOWED_USERS}}
+        run: echo Pull allowed!
+        run: exit 0
+
+      -name: Run user validation
+        if: ! ${{ github.event.pull_request.user.login }} == ${{ secrets.ALLOWED_USERS}}
+        run: echo Pull not allowed!
+        run: exit 1
+
+
+
+
+        # run: | 
+        #   if ${{ github.event.pull_request.user.login }} == ${{ secrets.ALLOWED_USERS}}; then
+        #     echo Pull allowed!
+        #   else
+        #     echo Pull not allowed!
+        #     exit 1
+        #   fi
 
 
         #run: echo ${{ github.event.pull_request.user.login }} 
