--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,14 +45,16 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run user validation
-        if: ${{ github.event.pull_request.user.login }} == ${{ secrets.ALLOWED_USERS}}
-        run: echo Pull allowed!
-        run: exit 0
+        if: ${{ github.event.pull_request.user.login }} == ${{ secrets.ALLOWED_USERS }}
+        run: |
+         echo Pull allowed!
+         exit 0
 
       -name: Run user validation
-        if: ! ${{ github.event.pull_request.user.login }} == ${{ secrets.ALLOWED_USERS}}
-        run: echo Pull not allowed!
-        run: exit 1
+        if: ! ${{ github.event.pull_request.user.login }} == ${{ secrets.ALLOWED_USERS }}
+        run: | 
+          echo Pull not allowed!
+          exit 1
 
 
 
