--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,13 +45,13 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run user validation
-        if: ${{ github.event.pull_request.user.login }} == ${{ secrets.ALLOWED_USERS }}
+        if: ${{ github.event.pull_request.user.login }} == $ALLOWED_USERS
         run: |
          echo Pull allowed!
          exit 0
 
       - name: Run user validation
-        if: ! ${{ github.event.pull_request.user.login }} == ${{ secrets.ALLOWED_USERS }}
+        if: ! ${{ github.event.pull_request.user.login }} == $ALLOWED_USERS
         run: | 
           echo Pull not allowed!
           exit 1
