--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
          exit 0
 
       - name: Run user validation
-        if: !${{ ${{ github.event.pull_request.user.login }} == $ALLOWED_USERS }}
+        if: ${{ github.event.pull_request.user.login }} != $ALLOWED_USERS 
         run: | 
           echo Pull not allowed!
           exit 1
