--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,19 @@ jobs:
             echo "$file was changed"
           done    
 
+      - name: Read JSON
+        run: |
+          content=`cat users.json`
+          # the following lines are only required for multi line json
+          content="${content//'%'/'%25'}"
+          content="${content//$'\n'/'%0A'}"
+          content="${content//$'\r'/'%0D'}"
+          # end of optional handling for multi line json
+          echo "::set-output name=packageJson::$content"
+
+        run: |
+          echo "${{fromJson(steps.set_var.outputs.packageJson).version}}"
+
 
       # Runs a single command using the runners shell
       - name: Run user validation
