--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,8 +57,8 @@ jobs:
       - name: Read JSON
         id: set_var
         run: |
-          cat ./users.json
-
+          content = cat ./users.json
+          echo content
 
       # Runs a single command using the runners shell
       - name: Run user validation
