--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,9 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    env:
+      TEST_VAR: Hallo_du_da
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -56,6 +59,7 @@ jobs:
             echo "$file was changed"
             echo Substring:
             echo $file | cut -d'/' -f 1
+            echo $TEST_VAR
           done    
 
 
