--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,6 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    env:
-      TEST_PY: Hallo_Python
-
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -44,19 +41,33 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      TEST_VAR: Hallo_du_da
+      CHANGED_FILES: null
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+      - uses: actions/setup-python@4
+        with:
+          python-version: '3.x'
+          cache: 'pip'
+      - run: pip install -r requirements.txt    
 
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v23.1
+        run: $CHANGED_FILES = ${{ steps.changed-files.outputs.all_changed_files }}
+
+
+      - name: Run user validation
+        run: python validateUser.py
+
+
+
 
       - name: List all changed files
         run: |
+
           for file in ${{ steps.changed-files.outputs.all_changed_files }}
           do
             echo "$file was changed"
