--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       - uses: tj-actions/changed-files@v23.1
-      - uses: actions/setup-python@4
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.x'
           cache: 'pip'
