--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,8 @@ jobs:
 
       - name: Get changed files
         id: changed-files
-        run: $CHANGED_FILES = ${{ steps.changed-files.outputs.all_changed_files }}
+       # run: $CHANGED_FILES = ${{ steps.changed-files.outputs.all_changed_files }}
+        run: echo "CHANGED_FILES=$(echo ${{ steps.changed-files.outputs.all_changed_files }})" >> $GITHUB_ENV
 
       - name: Run user validation
         run: python validateUser.py
