--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
       - run: pip install -r requirements.txt    
 
       - name: Get changed files
-      - uses: tj-actions/changed-files@v23.1
+        uses: tj-actions/changed-files@v23.1
         id: changed-files
         run: echo "CHANGED_FILES=$(echo ${{ steps.changed-files.outputs.all_changed_files }})" >> $GITHUB_ENV
 
