--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,9 +54,10 @@ jobs:
       - run: pip install -r requirements.txt    
 
       - name: Get changed files
-        uses: tj-actions/changed-files@v23.1
         id: changed-files
-        run: echo "CHANGED_FILES=$(echo ${{ steps.changed-files.outputs.all_changed_files }})" >> $GITHUB_ENV
+        uses: tj-actions/changed-files@v23.1
+        
+        #run: echo "CHANGED_FILES=$(echo ${{ steps.changed-files.outputs.all_changed_files }})" >> $GITHUB_ENV
 
       - name: Run user validation
         run: python validateUser.py
