--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,9 +57,9 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v23.1
         
-        #run: echo "CHANGED_FILES=$(echo ${{ steps.changed-files.outputs.all_changed_files }})" >> $GITHUB_ENV
-
+        
       - name: Run user validation
+        run: echo "CHANGED_FILES=$(echo ${{ steps.changed-files.outputs.all_changed_files }})" >> $GITHUB_ENV
         run: python validateUser.py
 
 
