--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,6 +67,7 @@ jobs:
 
       - name: List all changed files
         run: |
+          echo $CHANGED_FILES
           for file in ${{ steps.changed-files.outputs.all_changed_files }}
           do
             echo "$file was changed"
