--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,17 +57,18 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v23.1
         
+      - name: Variables assignment
+        run: |
+          echo "CHANGED_FILES=${{ steps.changed-files.outputs.all_changed_files }}" >> $GITHUB_ENV
+
 
       - name: Run user validation
         run: |
-          echo "CHANGED_FILES=${{ steps.changed-files.outputs.all_changed_files }}" >> $GITHUB_ENV
           python validateUser.py
-          echo $CHANGED_FILES
 
 
       - name: List all changed files
         run: |
-          echo $CHANGED_FILES
           for file in ${{ steps.changed-files.outputs.all_changed_files }}
           do
             echo "$file was changed"
