--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,7 @@ jobs:
 
     env:
       CHANGED_FILES: initValue_CHANGED_FILES
+      CURRENT_USER: initValue_CURRENT_USER
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -60,6 +61,7 @@ jobs:
       - name: Variables assignment
         run: |
           echo "CHANGED_FILES=${{ steps.changed-files.outputs.all_changed_files }}" >> $GITHUB_ENV
+          echo "CURRENT_USER="${{ github.event.pull_request.user.login }}" >> $GITHUB_ENV
 
 
       - name: Run user validation
