--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,7 @@ jobs:
     env:
       CHANGED_FILES: initValue_CHANGED_FILES
       CURRENT_USER: initValue_CURRENT_USER
+      ALLOWED_USERS: ${{ secrets.ALLOWED_USERS }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
